[package]
name = "beet_net"
version.workspace = true
edition.workspace = true
description = "Transport agnostic networking for bevy applications."
documentation.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["router", "request", "buckets", "key-value-store", "action"]
categories.workspace = true
publish = true

[features]
default = ["serde", "fs", "http", "nightly"]
nightly = []
json = ["serde",	"dep:serde_json", "beet_core/json"]
postcard = ["serde", "dep:postcard", "beet_core/postcard"]
# for conditional compilation in hooks
client = []
server = [
"dep:async-io",
"dep:futures-lite",
]
hyper = [
"server",
"dep:hyper",
"dep:http-body-util",
"dep:async-executor",
"dep:pin-project"
]
lambda = ["rustls-tls", "dep:lambda_http", "beet_core/tokio"]
fs = ["beet_core/fs","dep:async-process"]
tokens = ["beet_core/tokens"]
aws_sdk = [
	"serde",
	"dep:crc-fast",
	"dep:aws-sdk-s3",
	"dep:serde_dynamo",
	"dep:aws-sdk-dynamodb",
	"dep:aws-config",
	"beet_core/tokio",
]
serde = [
	"dep:serde",
	"dep:base64",
	"dep:serde_urlencoded",
	"uuid/serde",
	"beet_core/serde",
]
http = [
	"dep:http",
	"dep:eventsource-stream",
]
reqwest = ["dep:reqwest", "beet_core/tokio"]
ureq = ["dep:ureq", "dep:blocking"]
tungstenite = ["dep:async-tungstenite","dep:async-io","dep:blocking",	"dep:url"]
native-tls = [
	"reqwest?/default",
	"ureq?/native-tls",
	"async-tungstenite?/async-native-tls",
	"dep:async-native-tls"
]
rustls-tls = [
	"reqwest?/rustls-tls",
	"ureq?/rustls",
	"aws-config?/rustls",
	"aws-sdk-dynamodb?/rustls",
	"aws-sdk-s3?/rustls",
	"dep:futures-rustls",
	"dep:webpki-roots",
]
bevy_scene = ["beet_core/bevy_scene"]
bevy_multithreaded = ["beet_core/bevy_multithreaded"]
bevy_reflect_documentation = ["bevy/reflect_documentation"]
russh_server = [
	"dep:russh",
	"dep:tokio",
	"dep:rand",
	"server",
]
russh_client = [
	"dep:russh",
	"dep:tokio",
]

[dependencies]
beet_core = {workspace = true,features=["http"]}
beet_action = {workspace = true}

bevy.workspace = true

# utils
async-channel.workspace = true
extend.workspace = true
heck.workspace = true
thiserror.workspace = true
tracing.workspace = true
send_wrapper.workspace = true
uuid = {workspace = true, features = ["v7"]}
async-lock.workspace = true
bytes.workspace = true
# async
futures.workspace = true

# serde
base64 = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
serde_urlencoded = { version = "0.7", optional = true }
postcard = { workspace = true, optional = true }


# fs
path-clean = { version = "1" }

# http
http = { workspace = true, optional = true }
eventsource-stream = { version = "0.2.3", optional = true }
url = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-process = { workspace = true, optional = true }
# http (native)
reqwest = { version = "0.12", default-features = false, optional = true, features = [
	"stream",
] }
ureq = { version = "3.1", default-features = false, optional = true }
async-tungstenite = { version = "0.31", optional = true, default-features = false, features = [
"async-std-runtime",
"futures-03-sink"
] }
blocking = { version = "1.6", optional = true }
async-native-tls = { version = "0.5", optional = true }
# ureq uses ring instead of aws-lc-rs so we must too
futures-rustls = { version = "0.26", optional = true, default-features = false, features = ["ring", "logging", "tls12"] }
webpki-roots = { version = "1", optional = true }

#💡 server
async-io = { workspace = true, optional = true }
futures-lite = { workspace = true, optional = true }
#💡 ssh
russh = { version = "0.60", optional = true }
tokio = { workspace = true, optional = true, features = ["net", "sync", "io-util", "time", "macros"] }
# version must match russh's rand_core requirement for PrivateKey::random
rand = { version = "0.10", optional = true }
#💡 hyper server
hyper = { version = "1.7", features = ["server","http1"], optional = true }
http-body-util = {workspace = true, optional = true }
async-executor = { workspace = true, optional = true }
pin-project = { workspace = true, optional = true }

#💡 lambda
lambda_http = { version = "0.16", optional = true }

#💡 aws
# lock down aws-sdk-s3 upstream, some weird nightly feature breaks it
crc-fast = { version = "=1.3.0", optional = true }
serde_dynamo = { version = "4",optional = true, features = ["aws-sdk-dynamodb+1"]}
aws-sdk-dynamodb = { version = "1", optional = true, default-features = false, features = [
	# defaults without rustls
	"default-https-client",
	"rt-tokio",
] }
aws-sdk-s3 = { version = "1", optional = true, default-features = false, features = [
	# defaults without rustls
	"sigv4a",
	"default-https-client",
	"rt-tokio",
] }
aws-config = { version = "1", optional = true, default-features = false, features = [
	"default-https-client",
	"rt-tokio",
	"behavior-version-latest",
] }



[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = [
	# Fetch
	'Headers',
	'Request',
	'RequestInit',
	'RequestMode',
	'Response',
	'ReadableStream',
	'ReadableStreamDefaultController',
	'ReadableStreamDefaultReader',
	'BinaryType',
	# localstorage
	"Storage",
	# sockets
	"WebSocket",
	"ErrorEvent",
	"MessageEvent",
	"CloseEvent",
	"ProgressEvent",
] }

[dev-dependencies]
beet_core = { workspace = true, features = ["testing"] }
beet_net = {path = ".", features = ["bevy_scene"] }
# beet_net = {path = ".", features = ["ureq", "tungstenite", "native-tls", "flow"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
rcgen = { version = "0.14" }
futures-lite = { workspace = true }


[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
