[package]
name = "beet_net"
version.workspace = true
edition.workspace = true
description = "Transport agnostic networking for bevy applications."
documentation.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["router", "request", "blob-store", "key-value-store", "action"]
categories.workspace = true
publish = true

[features]
default = ["std", "serde", "fs", "http"]
nightly = []
# Enables the std-only surface: transports, stores, servers, sockets, the
# action/exchange integration, and the std-backed async primitives. The no_std
# core (the `types/` wire types) builds with this off.
std = [
	"beet_core/std",
	# the std surface (stores, transports, actions) is serde-saturated
	"serde",
	"dep:beet_action",
	"beet_action/std",
	"beet_action/reflect",
	"dep:async-channel",
	"dep:async-lock",
	"dep:futures",
	"dep:send_wrapper",
	"dep:uuid",
	"uuid/v7",
	# url-encoded query-param extractors: serde_urlencoded forces serde/std,
	# so it (and the extractors that use it) are std-only.
	"dep:serde_urlencoded",
]
json = ["serde",	"dep:serde_json", "beet_core/json", "beet_action?/json"]
postcard = ["serde", "dep:postcard", "beet_core/postcard"]
# for conditional compilation in hooks
client = []
server = [
"std",
"dep:async-io",
"dep:futures-lite",
]
hyper = [
"server",
"dep:hyper",
"dep:http-body-util",
"dep:async-executor",
"dep:pin-project"
]
lambda = ["std", "rustls-tls", "dep:lambda_http", "beet_core/tokio"]
fs = ["std", "beet_core/fs","dep:async-process"]
tokens = ["beet_core/tokens"]
aws_sdk = [
	"std",
	"serde",
	"dep:crc-fast",
	"dep:aws-sdk-s3",
	"dep:serde_dynamo",
	"dep:aws-sdk-dynamodb",
	"dep:aws-config",
	"beet_core/tokio",
]
serde = [
	"dep:serde",
	"dep:base64",
	"uuid?/serde",
	"beet_core/serde",
	"beet_action?/serde",
]
http = [
	"std",
	"dep:http",
	"dep:eventsource-stream",
]
reqwest = ["std", "dep:reqwest", "beet_core/tokio"]
ureq = ["std", "dep:ureq", "dep:blocking"]
tungstenite = ["std", "dep:async-tungstenite","dep:async-io","dep:blocking",	"dep:url"]
webdriver = ["tungstenite", "ureq", "json", "dep:async-process"]
native-tls = [
	"reqwest?/default",
	"ureq?/native-tls",
	"async-tungstenite?/async-native-tls",
	"dep:async-native-tls",
	"russh?/ring",
]
rustls-tls = [
	"reqwest?/rustls-tls",
	"ureq?/rustls",
	"aws-config?/rustls",
	"aws-sdk-dynamodb?/rustls",
	"aws-sdk-s3?/rustls",
	"dep:futures-rustls",
	"dep:webpki-roots",
	"russh?/aws-lc-rs",
]
world_serde = ["beet_core/world_serde", "beet_action?/world_serde"]
bevy_multithreaded = ["beet_core/bevy_multithreaded"]
bevy_reflect_documentation = ["bevy/reflect_documentation"]
russh_server = [
	"std",
	"dep:russh",
	"russh?/ring",
	"beet_core/tokio",
	"dep:tokio",
	"dep:rand",
	"server",
]
russh_client = [
	"std",
	"dep:russh",
	"russh?/ring",
	"beet_core/tokio",
	"dep:tokio",
]

[dependencies]
beet_core = { workspace = true, default-features = false, features = ["bevy_async"] }
# only needed for the std action/exchange integration
beet_action = { workspace = true, default-features = false, optional = true }

bevy.workspace = true

# utils
extend.workspace = true
heck.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid = { workspace = true, optional = true }
send_wrapper = { workspace = true, optional = true }
bytes.workspace = true
# async (no_std core stream trait)
futures-core.workspace = true
# async (std-only)
async-channel = { workspace = true, optional = true }
async-lock = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

# serde
base64 = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
serde_urlencoded = { version = "0.7", optional = true }
postcard = { workspace = true, optional = true }


# http
http = { workspace = true, optional = true }
eventsource-stream = { version = "0.2.3", optional = true }
url = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-process = { workspace = true, optional = true }
# http (native)
reqwest = { version = "0.12", default-features = false, optional = true, features = [
	"stream",
] }
ureq = { version = "3.1", default-features = false, optional = true }
async-tungstenite = { version = "0.31", optional = true, default-features = false, features = [
"async-std-runtime",
"futures-03-sink"
] }
blocking = { version = "1.6", optional = true }
async-native-tls = { version = "0.5", optional = true }
# ureq uses ring instead of aws-lc-rs so we must too
futures-rustls = { version = "0.26", optional = true, default-features = false, features = ["ring", "logging", "tls12"] }
webpki-roots = { version = "1", optional = true }

#💡 server
async-io = { workspace = true, optional = true }
futures-lite = { workspace = true, optional = true }
#💡 ssh
russh = { version = "0.60", optional = true }
tokio = { workspace = true, optional = true, features = ["net", "sync", "io-util", "time", "macros"] }
# version must match russh's rand_core requirement for PrivateKey::random
rand = { version = "0.10", optional = true }
#💡 hyper server
hyper = { version = "1.7", features = ["server","http1"], optional = true }
http-body-util = {workspace = true, optional = true }
async-executor = { workspace = true, optional = true }
pin-project = { workspace = true, optional = true }

#💡 lambda
lambda_http = { version = "0.16", optional = true }

#💡 aws
# lock down aws-sdk-s3 upstream, some weird nightly feature breaks it
crc-fast = { version = "=1.3.0", optional = true }
serde_dynamo = { version = "4",optional = true, features = ["aws-sdk-dynamodb+1"]}
aws-sdk-dynamodb = { version = "1", optional = true, default-features = false, features = [
	# defaults without rustls
	"default-https-client",
	"rt-tokio",
] }
aws-sdk-s3 = { version = "1", optional = true, default-features = false, features = [
	# defaults without rustls
	"sigv4a",
	"default-https-client",
	"rt-tokio",
] }
aws-config = { version = "1", optional = true, default-features = false, features = [
	"default-https-client",
	"rt-tokio",
	"behavior-version-latest",
] }



[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = [
	# Fetch
	'Headers',
	'Request',
	'RequestInit',
	'RequestMode',
	'Response',
	'ReadableStream',
	'ReadableStreamDefaultController',
	'ReadableStreamDefaultReader',
	'BinaryType',
	# localstorage
	"Storage",
	# indexeddb
	"IdbFactory",
	"IdbOpenDbRequest",
	"IdbDatabase",
	"IdbObjectStore",
	"IdbRequest",
	"IdbTransaction",
	"IdbTransactionMode",
	"Event",
	"EventTarget",
	# sockets
	"WebSocket",
	"ErrorEvent",
	"MessageEvent",
	"CloseEvent",
	"ProgressEvent",
] }

[dev-dependencies]
beet_core = { workspace = true, features = ["testing"] }
beet_net = {path = ".", features = ["world_serde"] }
# beet_net = {path = ".", features = ["ureq", "tungstenite", "native-tls", "flow"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
rcgen = { version = "0.14" }
futures-lite = { workspace = true }


[target.'cfg(target_arch = "wasm32")'.dev-dependencies]

[lib]
harness = false
