[package]
name = "beet_node"
version.workspace = true
edition.workspace = true
description = "Agnostic structured data representations in Bevy ECS"
documentation.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["std","net", "html_parser","markdown_parser","ansi_paint", "action", "bevy_scene", "rsx","style", "json", "serde"]
std = []
action = ["dep:beet_action"]
net = ["std", "dep:beet_net"]
tokens = ["beet_core/tokens"]
rsx = ["beet_core/rsx"]
style = ["dep:material-colors", "beet_core/bevy_color","heck"]
serde = ["dep:serde"]
json = ["dep:serde_json", "serde", "beet_core/json"]
postcard = ["dep:postcard", "serde", "beet_core/postcard"]
html_parser = ["dep:winnow"]
markdown_parser = ["html_parser", "dep:pulldown-cmark"]
ansi_paint = ["beet_core/ansi_paint", "dep:nu-ansi-term"]
tui = ["dep:bevy_ratatui", "dep:ratatui", "dep:crossterm"]
bevy_scene = ["beet_core/bevy_scene","bevy/bevy_scene", "serde"]

[dependencies]
beet_core = { workspace = true }
beet_net = { workspace = true, optional = true }
beet_action = {workspace = true,optional = true }
bevy.workspace = true
extend.workspace = true
bytes.workspace = true
uuid.workspace = true
serde = { workspace = true, optional = true }
winnow = { version = "0.7", optional = true }
crossterm = { version = "0.29", optional = true }
pulldown-cmark = { version = "0.13", optional = true, features = ["html"] }
nu-ansi-term = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
postcard = { workspace = true, optional = true }
heck = { workspace = true, optional = true }
thiserror.workspace = true
variadics_please.workspace = true
webbrowser.workspace = true
material-colors = {version = "0.4.2", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ratatui = {workspace = true, optional = true, features=["crossterm","unstable-rendered-line-info"]}
bevy_ratatui = {workspace = true, optional = true, features = ["crossterm","keyboard", "mouse"] }

[dev-dependencies]
beet_core = { workspace = true, features = ["testing"] }
beet_net.workspace = true
