[package]
name = "beet_parse"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true


[features]
default = ["html"]
html = ["dep:beet_rsx_combinator"]

[dependencies]
beet_common = { workspace = true, features = ["serde", "tokens"] }
sweet = { workspace = true, features = ["bevy"] }
beet_rsx_combinator = { workspace = true, optional = true }

ron.workspace = true
anyhow.workspace = true
bevy.workspace = true

syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
heck.workspace = true
rapidhash.workspace = true
rstml = { version = "0.12", features = ["rawtext-stable-hack"] }
proc-macro2-diagnostics.workspace = true

[dev-dependencies]
sweet = { workspace = true, features = ["test"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
sweet = { workspace = true, features = ["bevy", "fs"] }
