[package]
name = "beet_parse"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true


[features]
default = ["rsx"]
css = ["dep:lightningcss", "dep:parcel_selectors"]
rsx = ["dep:beet_rsx_combinator"]

[dependencies]
beet_core = { workspace = true, features = ["serde", "tokens"] }
beet_utils.workspace = true
beet_rsx_combinator = { workspace = true, optional = true }


#💡 style
parcel_selectors = { version = "0.28", optional = true }
lightningcss = { version = "1.0.0-alpha.63", optional = true }

ron.workspace = true
anyhow.workspace = true
bevy.workspace = true
send_wrapper.workspace = true
# only for rawtext css hack, should be removed
regex = "1"

syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
rayon.workspace = true
heck.workspace = true
rapidhash.workspace = true
rstml = { version = "0.12", features = ["rawtext-stable-hack"] }
proc-macro2-diagnostics.workspace = true

[dev-dependencies]
sweet.workspace = true
beet_core = { workspace = true, features = ["bevy_scene"] }
