[package]
name = "beet_query"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
description = "Extend beet server actions with database queries"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = ["limbo"]
limbo = ["dep:limbo"]
libsql = ["dep:libsql"]


[dependencies]
anyhow.workspace = true
thiserror.workspace = true
beet_query_macros.workspace = true

sweet = { workspace = true, features = ["net"] }

base64 = { version = "0" }
libsql = { version = "0.9", optional = true }
limbo = { version = "0.0.19", optional = true }

[dev-dependencies]
tokio.workspace = true
sweet = { workspace = true, features = ["test"] }

[build-dependencies]
anyhow.workspace = true


[[example]]
name = "libsql"
required-features = ["libsql"]
