[package]
name = "beet_rig"
version.workspace = true
edition.workspace = true
description = "Integration with Rig."
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish = true

[features]
default = ["render"]
render = []


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
beet_flow.workspace = true
beet_spatial.workspace = true
bevy.workspace = true
thiserror.workspace = true

tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
rig-core = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
# bevy = { workspace = true, default-features = true }
sweet.workspace = true
